// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main app bar component app bar indented when drawer is open 1`] = `
Object {
  "classes": Object {
    "appBar": "MainAppBar-appBar-66",
    "appBarShift": "MainAppBar-appBarShift-67",
    "button": "MainAppBar-button-70",
    "grow": "MainAppBar-grow-68",
    "hide": "MainAppBar-hide-73",
    "menuButton": "MainAppBar-menuButton-71",
    "menuButtonPlaceholder": "MainAppBar-menuButtonPlaceholder-72",
    "root": "MainAppBar-root-65",
    "titleButton": "MainAppBar-titleButton-69",
  },
  "darkMode": false,
  "drawerOpen": true,
  "loading": true,
  "loggedIn": true,
  "logo": undefined,
  "manageCookies": [Function],
  "navigateToAdminPage": [Function],
  "navigateToContactPage": [Function],
  "navigateToHelpPage": [Function],
  "navigateToHome": [Function],
  "plugins": Array [],
  "res": undefined,
  "showAdminPageButton": true,
  "showContactButton": true,
  "showHelpPageButton": true,
  "singlePluginLogo": false,
  "toggleDarkMode": [Function],
  "toggleDrawer": [Function],
  "toggleHelp": [Function],
}
`;

exports[`Main app bar component app bar renders correctly 1`] = `
Object {
  "classes": Object {
    "appBar": "MainAppBar-appBar-2",
    "appBarShift": "MainAppBar-appBarShift-3",
    "button": "MainAppBar-button-6",
    "grow": "MainAppBar-grow-4",
    "hide": "MainAppBar-hide-9",
    "menuButton": "MainAppBar-menuButton-7",
    "menuButtonPlaceholder": "MainAppBar-menuButtonPlaceholder-8",
    "root": "MainAppBar-root-1",
    "titleButton": "MainAppBar-titleButton-5",
  },
  "darkMode": false,
  "drawerOpen": false,
  "loading": true,
  "loggedIn": true,
  "logo": undefined,
  "manageCookies": [Function],
  "navigateToAdminPage": [Function],
  "navigateToContactPage": [Function],
  "navigateToHelpPage": [Function],
  "navigateToHome": [Function],
  "plugins": Array [],
  "res": undefined,
  "showAdminPageButton": true,
  "showContactButton": true,
  "showHelpPageButton": true,
  "singlePluginLogo": false,
  "toggleDarkMode": [Function],
  "toggleDrawer": [Function],
  "toggleHelp": [Function],
}
`;

exports[`Main app bar component does not render Help button when feature is false 1`] = `
Object {
  "classes": Object {
    "appBar": "MainAppBar-appBar-34",
    "appBarShift": "MainAppBar-appBarShift-35",
    "button": "MainAppBar-button-38",
    "grow": "MainAppBar-grow-36",
    "hide": "MainAppBar-hide-41",
    "menuButton": "MainAppBar-menuButton-39",
    "menuButtonPlaceholder": "MainAppBar-menuButtonPlaceholder-40",
    "root": "MainAppBar-root-33",
    "titleButton": "MainAppBar-titleButton-37",
  },
  "darkMode": false,
  "drawerOpen": false,
  "loading": true,
  "loggedIn": true,
  "logo": undefined,
  "manageCookies": [Function],
  "navigateToAdminPage": [Function],
  "navigateToContactPage": [Function],
  "navigateToHelpPage": [Function],
  "navigateToHome": [Function],
  "plugins": Array [],
  "res": undefined,
  "showAdminPageButton": true,
  "showContactButton": true,
  "showHelpPageButton": false,
  "singlePluginLogo": false,
  "toggleDarkMode": [Function],
  "toggleDrawer": [Function],
  "toggleHelp": [Function],
}
`;

exports[`Main app bar component does not render contact button when feature is false 1`] = `
Object {
  "classes": Object {
    "appBar": "MainAppBar-appBar-18",
    "appBarShift": "MainAppBar-appBarShift-19",
    "button": "MainAppBar-button-22",
    "grow": "MainAppBar-grow-20",
    "hide": "MainAppBar-hide-25",
    "menuButton": "MainAppBar-menuButton-23",
    "menuButtonPlaceholder": "MainAppBar-menuButtonPlaceholder-24",
    "root": "MainAppBar-root-17",
    "titleButton": "MainAppBar-titleButton-21",
  },
  "darkMode": false,
  "drawerOpen": false,
  "loading": true,
  "loggedIn": true,
  "logo": undefined,
  "manageCookies": [Function],
  "navigateToAdminPage": [Function],
  "navigateToContactPage": [Function],
  "navigateToHelpPage": [Function],
  "navigateToHome": [Function],
  "plugins": Array [],
  "res": undefined,
  "showAdminPageButton": true,
  "showContactButton": false,
  "showHelpPageButton": true,
  "singlePluginLogo": false,
  "toggleDarkMode": [Function],
  "toggleDrawer": [Function],
  "toggleHelp": [Function],
}
`;

exports[`Main app bar component uses single plugin logo when feature is true 1`] = `
Object {
  "classes": Object {
    "appBar": "MainAppBar-appBar-50",
    "appBarShift": "MainAppBar-appBarShift-51",
    "button": "MainAppBar-button-54",
    "grow": "MainAppBar-grow-52",
    "hide": "MainAppBar-hide-57",
    "menuButton": "MainAppBar-menuButton-55",
    "menuButtonPlaceholder": "MainAppBar-menuButtonPlaceholder-56",
    "root": "MainAppBar-root-49",
    "titleButton": "MainAppBar-titleButton-53",
  },
  "darkMode": false,
  "drawerOpen": false,
  "loading": true,
  "loggedIn": true,
  "logo": undefined,
  "manageCookies": [Function],
  "navigateToAdminPage": [Function],
  "navigateToContactPage": [Function],
  "navigateToHelpPage": [Function],
  "navigateToHome": [Function],
  "plugins": Array [],
  "res": undefined,
  "showAdminPageButton": true,
  "showContactButton": true,
  "showHelpPageButton": true,
  "singlePluginLogo": true,
  "toggleDarkMode": [Function],
  "toggleDrawer": [Function],
  "toggleHelp": [Function],
}
`;
